--- a/test/.themisrc
+++ b/test/.themisrc
@@ -1,8 +1,10 @@
 let s:assert = themis#helper('assert')
 call themis#helper('command').with(s:assert)
 
+let s:V = vital#vcvars#import('Prelude')
+
 let g:is_win = has('win32') || has('win64')
 
 function! Where(name, path) abort
-  return split(globpath(join(map(copy(a:path), 'escape(v:val, ",")'), ','), a:name, 1), '\n')
+  return s:V.globpath(join(map(copy(a:path), 'escape(v:val, ",")'), ','), a:name)
 endfunction
