--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install covimerage
         run: |
           python -m pip install -U pip setuptools wheel
-          pip install -U covimerage
+          pip install -U 'click<8' covimerage
       - name: Test
         env:
           THEMIS_VIM: ${{ steps.vim.outputs.executable }}
@@ -46,4 +46,4 @@ jobs:
           covimerage write_coverage ${{ env.PROFILE }}
           covimerage xml
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
