--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,12 @@ jobs:
           - v8.2.0000
           - v8.1.0001
           - v8.0.0002
+        arch:
+          - x86
+          - x86_64
       fail-fast: false
-    name: Vim ${{ matrix.vim_version }}
-    runs-on: windows-latest
+    name: Vim ${{ matrix.vim_version }} (${{ matrix.arch }})
+    runs-on: windows-2019
     env:
       PROFILE: profile.txt
     timeout-minutes: 10
@@ -30,13 +33,14 @@ jobs:
         uses: thinca/action-setup-vim@v1
         with:
           vim_version: ${{ matrix.vim_version }}
+          arch: ${{ matrix.arch }}
           download: always
       - name: Setup Python
         uses: actions/setup-python@v2
       - name: Install covimerage
         run: |
           python -m pip install -U pip setuptools wheel
-          pip install -U 'click<8' covimerage
+          pip install -U covimerage
       - name: Test
         env:
           THEMIS_VIM: ${{ steps.vim.outputs.executable }}
