--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         vim_version:
-          - v8.2.4755
+          - head
           - v8.2.0000
           - v8.1.0001
           - v8.0.0002
