--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,9 @@ jobs:
           arch: ${{ matrix.arch }}
           download: always
       - name: Setup Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
       - name: Install covimerage
         run: |
           python -m pip install -U pip setuptools wheel
