--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Checkout themis.vim
         uses: actions/checkout@v4
         with:
           repository: thinca/vim-themis
+          persist-credentials: false
           path: vim-themis
       - name: Setup Vim
         id: vim
